--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-    <title>Grace's Quasar App</title>
+    <title>Find A Parking Space</title>
     <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
   </head>
   <body>
