--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     <title>Find A Parking Space</title>
     <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0jUHlx7hO_U9ZqzuQ_48wtcMQiiHAhok"></script>
   </head>
   <body>
     <div id="q-app"></div>
