--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <title>Find A Parking Space</title>
     <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0jUHlx7hO_U9ZqzuQ_48wtcMQiiHAhok"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="q-app"></div>
